@@ -1,22 +1,32 @@
 import com.typesafe.sbt.packager.MappingsHelper._
 
-name := """play-scala-forms-example"""
+name := """railweb"""
 
-version := "2.6.0"
+version := "2.7.0"
 
-scalaVersion := "2.12.8"
+scalaVersion := "2.13.3"
 
-crossScalaVersions := Seq("2.11.12", "2.12.7")
+//crossScalaVersions := Seq("2.11.12", "2.12.7")
 
 lazy val root = (project in file(".")).enablePlugins(PlayScala)
 
 libraryDependencies += guice
-libraryDependencies += "org.scalatestplus.play" %% "scalatestplus-play" % "4.0.1" % Test
+libraryDependencies += "org.scalatestplus.play" %% "scalatestplus-play" % "5.1.0" % Test
 libraryDependencies ++= Seq(
   "com.auth0" % "java-jwt" % "3.8.0",
-  "org.json4s" %% "json4s-jackson" % "3.6.5",
-  "org.json4s" %% "json4s-native" % "3.6.5",
-  "org.postgresql" % "postgresql" % "42.2.1"
+  "org.json4s" %% "json4s-jackson" % "3.6.9",
+  "org.json4s" %% "json4s-native" % "3.6.9",
+  "org.postgresql" % "postgresql" % "42.2.1",
+  "org.json4s" %% "json4s-ext" % "3.6.11"
+
+)
+
+libraryDependencies += ws
+libraryDependencies += ehcache
+
+libraryDependencies ++= Seq (
+  "org.mockito" %% "mockito-scala" % "1.15.0" % "test",
+  "org.mockito" % "mockito-core" % "3.5.13" % "test"
 )
 
 scalacOptions ++= Seq(
@@ -24,5 +34,10 @@ scalacOptions ++= Seq(
   "-deprecation",
   "-Xfatal-warnings"
 )
+
+javaOptions += "--add-opens java.base/jdk.internal.misc=ALL-UNNAMED"
+javaOptions += "-Dio.netty.tryReflectionSetAccessible=true"
+
+javaOptions += "--illegal-access=warn"
 
 mappings in Universal ++= directory(baseDirectory.value / "resources")
